--- a/Lj2Dd1En2/App.xaml
+++ b/Lj2Dd1En2/App.xaml
@@ -1,9 +1,36 @@
 ﻿<Application x:Class="Lj2Dd1En2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Lj2Dd1En2"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Lj2Dd1En2.Views"
+             StartupUri="Views/DisplayWindow.xaml">
     <Application.Resources>
-         
+        <!--#region Window-->
+        <Style TargetType="Window">
+            <Setter Property="Background" Value="Purple"/>
+            <Setter Property="Foreground" Value="Wheat"/>
+        </Style>
+
+        <Style TargetType="local:DisplayWindow" BasedOn="{StaticResource {x:Type Window}}"/>
+        <!--#endregion-->
+
+
+        <Style TargetType="ListView">
+            <Setter Property="Background" Value="Gray"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+        </Style>
+        <Style TargetType="ListViewItem">
+            <Setter Property="Background" Value="Black"/>
+            <Setter Property="Margin" Value="0, 2"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Foreground" Value="Wheat"/>
+        </Style>
+
+        <Style TargetType="Button">
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="05"/>
+                </Style>
+            </Style.Resources>
+        </Style>
     </Application.Resources>
 </Application>
