--- a/Lj2Dd1En2/App.xaml
+++ b/Lj2Dd1En2/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Lj2Dd1En2.Views"
-             StartupUri="Views/DisplayWindow.xaml">
+             StartupUri="Views/KeuzeWindow.xaml">
     <Application.Resources>
         <!--#region Window-->
         <Style TargetType="Window">
@@ -11,6 +11,7 @@
         </Style>
 
         <Style TargetType="local:DisplayWindow" BasedOn="{StaticResource {x:Type Window}}"/>
+        <Style TargetType="local:KeuzeWindow" BasedOn="{StaticResource {x:Type Window}}"/>
         <!--#endregion-->
 
 
