--- a/Lj2Dd1En2/App.xaml
+++ b/Lj2Dd1En2/App.xaml
@@ -12,6 +12,7 @@
 
         <Style TargetType="local:DisplayWindow" BasedOn="{StaticResource {x:Type Window}}"/>
         <Style TargetType="local:KeuzeWindow" BasedOn="{StaticResource {x:Type Window}}"/>
+        <Style TargetType="local:IngredientWindow" BasedOn="{StaticResource {x:Type Window}}"/>
         <!--#endregion-->
 
 
