IngredientWindow aanepast: UnitName uit de property Unit.Name

--- a/Lj2Dd1En2/Views/IngredientWindow.xaml
+++ b/Lj2Dd1En2/Views/IngredientWindow.xaml
@@ -21,7 +21,7 @@
                         </DockPanel>
                         <DockPanel>
                             <TextBlock Text="Eenheid:" Margin="2"/>
-                            <TextBlock Text="{Binding Unit}" Margin="2"/>
+                            <TextBlock Text="{Binding Unit.Name}" Margin="2"/>
                         </DockPanel>
                     </StackPanel>
                 </DataTemplate>
