--- a/Lj2Dd1En2/Views/IngredientWindow.xaml
+++ b/Lj2Dd1En2/Views/IngredientWindow.xaml
@@ -5,27 +5,105 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lj2Dd1En2.Views"
         mc:Ignorable="d"
-     Title="Ingredienten Window" Height="450" Width="300">
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize" 
+        Title="Ingrediënten - Lijst" Height="450" Width="800">
     <Grid Margin="20">
-        <ListView ItemsSource="{Binding Ingredients}" SelectedItem="{Binding SelectedIngredient}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="340"/>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <ListView Grid.Column="0" ItemsSource="{Binding Ingredients}" SelectedItem="{Binding SelectedIngredient}" >
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Width="200" Margin="5">
-                        <DockPanel>
-                            <TextBlock Text="Naam:" Margin="2"/>
-                            <TextBlock Text="{Binding Name}" Margin="2"/>
-                        </DockPanel>
-                        <DockPanel>
-                            <TextBlock Text="Prijs:" Margin="2"/>
-                            <TextBlock Text="{Binding Price, StringFormat='€ 0.00'}" Margin="2"/>
-                        </DockPanel>
-                        <DockPanel>
-                            <TextBlock Text="Eenheid:" Margin="2"/>
-                            <TextBlock Text="{Binding Unit.Name}" Margin="2"/>
-                        </DockPanel>
+                    <StackPanel Orientation="Horizontal" Width="300">
+                        <TextBlock Text="{Binding Name}" Width="200"  Margin="5" TextWrapping="Wrap"/>
+                        <Button Content="Verwijderen" Width="70" 
+                                Margin="10, 3, 10, 3"
+                                Click="BtnDelete_Click" />
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0" Text="Nieuw Ingrediënt" Margin="5, 2"/>
+            <Grid Grid.Row="1" Margin="5, 1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" Text="Naam:" Margin="0, 2"/>
+                <TextBox   Grid.Column="1" Grid.Row="0" 
+                           DataContext="{Binding NewIngredient}" Text="{Binding Name}" 
+                           Margin="0, 2"/>
+
+                <TextBlock Grid.Column="0" Grid.Row="1" Text="Eenheid:" Margin="0, 2"/>
+                <ComboBox  Grid.Column="1" Grid.Row="1" 
+                           ItemsSource="{Binding Units}" SelectedItem="{Binding NewIngredientUnit}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+
+                <TextBlock Grid.Column="0" Grid.Row="2" Text="Prijs:" Margin="0, 2"/>
+                <TextBox   Grid.Column="1" Grid.Row="2" DataContext="{Binding NewIngredient}" Text="{Binding Price}" 
+                           Margin="0, 2"/>
+            </Grid>
+            <Button Grid.Row="2" Content="Toevoegen" Margin="5, 1"
+                    Click="BtnCreate_Click"/>
+
+            <TextBlock Grid.Row="4" Text="Geselecteerd Ingrediënt" Margin="5, 2"/>
+            <Grid Grid.Row="5" Margin="5, 1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" Text="Naam:" Margin="0, 2"/>
+                <TextBox   Grid.Column="1" Grid.Row="0" 
+                           DataContext="{Binding SelectedIngredient}" Text="{Binding Name}" 
+                           Margin="0, 2"/>
+
+                <TextBlock Grid.Column="0" Grid.Row="1" Text="Eenheid:" Margin="0, 2"/>
+                <ComboBox  Grid.Column="1" Grid.Row="1" 
+                           ItemsSource="{Binding Units}" SelectedItem="{Binding ExistingIngredientUnit}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+
+                <TextBlock Grid.Column="0" Grid.Row="2" Text="Prijs:" Margin="0, 2"/>
+                <TextBox   Grid.Column="1" Grid.Row="2" 
+                           DataContext="{Binding SelectedIngredient}" Text="{Binding Price}" 
+                           Margin="0, 2"/>
+            </Grid>
+            <Button Grid.Row="6" Content="Wijzigen" Margin="5, 1"
+                    Click="BtnUpdate_Click"/>
+        </Grid>
     </Grid>
 </Window>
