Databaseclass aangepast: - CreateMealIngredient - DeleteMealIngredient
Views
- MealWindow toegevoegd
- KeuzeWindow uitgebreid met MealWindow
- App.xaml: tbv layout MealWindow toegevoegd

Overig:
-IngredientWindow dummydata in list getoond
- Asserts folder toegevoegd met del.png afbeelding

--- a/Lj2Dd1En2/App.xaml
+++ b/Lj2Dd1En2/App.xaml
@@ -13,6 +13,7 @@
         <Style TargetType="local:DisplayWindow" BasedOn="{StaticResource {x:Type Window}}"/>
         <Style TargetType="local:KeuzeWindow" BasedOn="{StaticResource {x:Type Window}}"/>
         <Style TargetType="local:IngredientWindow" BasedOn="{StaticResource {x:Type Window}}"/>
+        <Style TargetType="local:MealWindow" BasedOn="{StaticResource {x:Type Window}}"/>
         <!--#endregion-->
 
 
