--- a/Lj2Dd1En2/Views/KeuzeWindow.xaml
+++ b/Lj2Dd1En2/Views/KeuzeWindow.xaml
@@ -18,13 +18,14 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Bediening" Margin="10"/>
         <StackPanel Grid.Column="1" Grid.Row="0"  Margin="10, 10, 10, 30">
-            <Button Content="Maaltijden" Click="BtnDisplayWindow_Click" Margin="0, 0, 0, 5"/>
+            <Button Content="Display" Click="BtnDisplayWindow_Click" Margin="0, 0, 0, 5"/>
         </StackPanel>
 
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Manager" Margin="10"/>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10, 10, 10, 30">
-            <Button Content="Maaltijden" Click="BtnDisplayWindow_Click" Margin="0, 0, 0, 5"/>
-            <Button Content="Ingredienten" Click="BtnIngredientenWindow_Click" Margin="0, 0, 0, 5"/>
+            <Button Content="Display" Click="BtnDisplayWindow_Click" Margin="0, 0, 0, 5"/>
+            <Button Content="Maaltijden" Click="BtnMaaltijdenWindow_Click" Margin="0, 0, 0, 5"/>
+            <Button Content="Ingrediënten" Click="BtnIngredientenWindow_Click" Margin="0, 0, 0, 5"/>
         </StackPanel>
     </Grid>
 </Window>
